--- a/requirements.txt
+++ b/requirements.txt
@@ -1,122 +1,90 @@
 absl-py==2.1.0
+aiohappyeyeballs==2.4.4
+aiohttp==3.11.11
+aiohttp-retry==2.8.3
+aiosignal==1.3.2
 astunparse==1.6.3
+async-timeout==5.0.1
+attrs==24.3.0
 beautifulsoup4==4.12.3
 blinker==1.9.0
-
-certifi==2020.6.20
-chardet==4.0.0
+cachetools==5.5.0
+certifi==2024.12.14
 charset-normalizer==3.4.1
 click==8.1.8
-colorama==0.4.4
-command-not-found==0.3
-contourpy==1.3.1
-cryptography==3.4.8
-cupshelpers==1.0
-cycler==0.12.1
-dbus-python==1.2.18
 deepface==0.0.93
-defer==1.0.6
-distro==1.7.0
-distro-info==1.1+ubuntu0.2
 dlib==19.24.6
 face-recognition==1.3.0
 face-recognition-models==0.3.0
 filelock==3.16.1
 fire==0.7.0
-Flask==2.0.1
+Flask==3.1.0
 Flask-Cors==5.0.0
+Flask-SQLAlchemy==3.0.5
 flatbuffers==24.12.23
-fonttools==4.55.3
-gast==0.6.0
+frozenlist==1.5.0
+gast==0.4.0
 gdown==5.2.0
+google-auth==2.37.0
+google-auth-oauthlib==1.0.0
 google-pasta==0.2.0
+greenlet==3.1.1
 grpcio==1.69.0
 gunicorn==23.0.0
 h5py==3.12.1
-httplib2==0.20.2
-idna==3.3
-importlib-metadata==4.6.4
+idna==3.10
 itsdangerous==2.2.0
-jeepney==0.7.1
 Jinja2==3.1.5
 joblib==1.4.2
-kazam==1.4.5
-keras==3.8.0
-keyring==23.5.0
-kiwisolver==1.4.7
-language-selector==0.1
-launchpadlib==1.10.16
-lazr.restfulclient==0.14.4
-lazr.uri==1.0.6
+keras==2.13.1
 libclang==18.1.1
-louis==3.20.0
 lz4==4.3.3
-macaroonbakery==1.3.1
 Markdown==3.7
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
-matplotlib==3.10.0
 mdurl==0.1.2
 ml-dtypes==0.4.1
-more-itertools==8.10.0
 mtcnn==1.0.0
+multidict==6.1.0
 namex==0.0.8
-netifaces==0.11.0
-numpy==2.0.2
-oauthlib==3.2.0
-olefile==0.46
-opencv-python==4.10.0.84
+numpy==1.24.3
+oauthlib==3.2.2
+opencv-python==4.11.0.86
 opt_einsum==3.4.0
 optree==0.14.0
 packaging==24.2
 pandas==2.2.3
-pexpect==4.8.0
-Pillow==9.0.1
-protobuf==5.29.3
-ptyprocess==0.7.0
-pycairo==1.20.1
-pycups==2.0.1
-pygame==2.6.1
+pillow==11.1.0
+propcache==0.2.1
+protobuf==4.25.5
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
 Pygments==2.19.1
-PyGObject==3.42.1
 PyJWT==2.1.0
-pymacaroons==0.13.0
-PyNaCl==1.5.0
-pyparsing==2.4.7
-pyRFC3339==1.1
 PySocks==1.7.1
-python-apt==2.4.0+ubuntu4
 python-dateutil==2.9.0.post0
-python-debian==0.1.43+ubuntu1.1
 python-dotenv==1.0.0
-pytz==2022.1
-pyxdg==0.27
-PyYAML==5.4.1
-reportlab==3.6.8
+pytz==2024.2
 requests==2.32.3
+requests-oauthlib==2.0.0
 retina-face==0.0.17
 rich==13.9.4
-SecretStorage==3.3.1
-six==1.16.0
+rsa==4.9
+six==1.17.0
 soupsieve==2.6
-systemd-python==234
-tensorboard==2.18.0
+SQLAlchemy==2.0.23
+tensorboard==2.13.0
 tensorboard-data-server==0.7.2
-tensorflow==2.18.0
+tensorflow==2.13.0
+tensorflow-estimator==2.13.0
 tensorflow-io-gcs-filesystem==0.37.1
 termcolor==2.5.0
+tf_keras==2.18.0
 tqdm==4.67.1
-typing_extensions==4.12.2
+twilio==9.4.3
+typing_extensions==4.5.0
 tzdata==2024.2
-ubuntu-drivers-common==0.0.0
-ubuntu-pro-client==8001
-ufw==0.36.1
-unattended-upgrades==0.1
-urllib3==1.26.5
-vboxapi==1.0
-wadllib==1.3.6
-Werkzeug==2.0.1
+urllib3==2.3.0
+Werkzeug==3.1.3
 wrapt==1.17.2
-xdg==5
-xkit==0.0.0
-zipp==1.0.0
+yarl==1.18.3
