--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,7 @@ cachetools==5.5.0
 certifi==2024.12.14
 charset-normalizer==3.4.1
 click==8.1.8
-deepface==0.0.93
+deepface
 dlib==19.24.6
 face-recognition==1.3.0
 face-recognition-models==0.3.0
@@ -67,7 +67,7 @@ python-dotenv==1.0.0
 pytz==2024.2
 requests==2.32.3
 requests-oauthlib==2.0.0
-retina-face==0.0.17
+retina-face
 rich==13.9.4
 rsa==4.9
 six==1.17.0
@@ -75,11 +75,11 @@ soupsieve==2.6
 SQLAlchemy==2.0.23
 tensorboard==2.13.0
 tensorboard-data-server==0.7.2
-tensorflow==2.13.0
+tensorflow>=2.13.0,<2.19.0
 tensorflow-estimator==2.13.0
 tensorflow-io-gcs-filesystem==0.37.1
 termcolor==2.5.0
-tf_keras==2.18.0
+tf_keras
 tqdm==4.67.1
 twilio==9.4.3
 typing_extensions==4.5.0
